app/lbocp-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: lbocp
  name: lbocp
  namespace: lb
spec:
  replicas: 4
  selector:
    app: lbocp
    deploymentconfig: lbocp
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: lbocp
        deploymentconfig: lbocp
    spec:
      containers:
      - image: docker-registry.default.svc:5000/lb/lbocp
        imagePullPolicy: Always
        name: lbocp
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - lbocp
      from:
        kind: ImageStreamTag
        name: lbocp:latest
        namespace: lb
    type: ImageChange
